# echo-sophia

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
EchoSophia/: audio.py  chat.py  prompting.py
chunks/: .gitignore
docs/: extract_wisdom.md
src/EchoSophia/: __main__.py  audio.py  chat.py  cli.py  prompting.py  utils.py
